fix(header): 🐛 disable wrapping to fix indicator wrapping
(cherry picked from commit 4a759dabe318cc8afc0b348760bac0b95fe6e247)

--- a/resources/skins.citizen.styles/components/PageHeader.less
+++ b/resources/skins.citizen.styles/components/PageHeader.less
@@ -27,7 +27,7 @@
 
 .firstHeading-container {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	align-items: center;
 }
 
